sink changes