@@ -19,7 +19,7 @@ public class MathService {
                     .peek(i -> SleepUtil.sleepSeconds(1))
                     .peek(i -> System.out.println("math-service processing : " + i))
                     .mapToObj(i -> new Response(i * input))
-                    .collect(Collectors.toList());
+                    .toList(); //collect(Collectors.toList());
     }
 
 
